@@ -1,3 +1,9 @@
+Mon Jan 23 03:15:00 CET 2006 Angel Carpintero
+	* src/plugin.c plugin.h : Added plugin_cleanup() to free 
+	  the plugin handle resources and remove the goto from
+	  plugin_load(). Also add mymalloc instead of malloc following
+	  comments of Per.
+	
 Mon Jan 23 02:42:00 CET 2006 Angel Carpintero
 	* src/motion.c motion.h: Added mystrndup() function to use with
 	  the same behaviour of strndup().
